--- a/src/components/landing-page/landing-login/style/login.css
+++ b/src/components/landing-page/landing-login/style/login.css
@@ -5,8 +5,9 @@
   background-size: cover;
   position: relative;
 }
+
 .login-container:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   bottom: 0;
@@ -18,6 +19,7 @@
 
 .login-form {
   z-index: 5;
+  display: -ms-grid;
   display: grid;
   position: absolute;
   left: 18%;
@@ -27,19 +29,38 @@
   height: 600px;
   background-color: #FFFFFF;
   grid-gap: 5%;
-  grid-template-columns: 45% 50%;
+  -ms-grid-columns: 45% 50%;
+      grid-template-columns: 45% 50%;
 }
+
 @media screen and (max-width: 1100px) {
   .login-form {
     height: 500px;
   }
 }
+
 @media screen and (max-width: 700px) {
   .login-form {
-    grid-template-columns: 90% 5%;
+    -ms-grid-columns: 90% 5%;
+        grid-template-columns: 90% 5%;
     width: 70%;
     height: 400px;
   }
+}
+
+.input-group {
+  position: relative;
+  width: 100%;
+}
+
+.password-toggle {
+  background: none;
+  border: none;
+  font-weight: 600;
+  position: absolute;
+  right: .75em;
+  top: .75em;
+  z-index: 9;
 }
 
 .reset-form {
@@ -52,6 +73,7 @@
   height: 400px;
   background-color: #FFFFFF;
 }
+
 @media screen and (max-width: 700px) {
   .reset-form {
     width: 65%;
@@ -61,46 +83,74 @@
 }
 
 .reset__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-self: center;
   width: 80%;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
   color: rgba(0, 0, 0, 0.5);
 }
 
 .login-form__item {
+  display: -ms-grid;
   display: grid;
-  justify-content: center;
-  grid-template-rows: 30% 50%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-rows: 30% 50%;
+      grid-template-rows: 30% 50%;
 }
+
 @media screen and (max-width: 700px) {
   .login-form__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
     margin: auto;
   }
 }
 
 .login__form {
+  display: -ms-grid;
   display: grid;
-  justify-content: center;
-  grid-template-rows: 70% 30%;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-rows: 70% 30%;
+      grid-template-rows: 70% 30%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 @media screen and (max-width: 700px) {
   .login__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
   }
 }
 
 .reset-form__item {
   height: 300px;
+  display: -ms-grid;
   display: grid;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (max-width: 1270px) {
@@ -108,6 +158,7 @@
     width: 98%;
   }
 }
+
 @media screen and (max-width: 700px) {
   .login-form__img {
     display: none;
@@ -115,8 +166,11 @@
 }
 
 .login__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   justify-self: center;
   font-style: normal;
   font-weight: 900;
@@ -124,11 +178,13 @@
   line-height: 36px;
   color: #202A49;
 }
+
 @media screen and (max-width: 1270px) {
   .login__title {
     font-size: 28px;
   }
 }
+
 @media screen and (max-width: 700px) {
   .login__title {
     font-size: 20px;
@@ -136,6 +192,8 @@
 }
 
 .reset__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-self: center;
   font-style: normal;
@@ -156,21 +214,28 @@
   height: 14px;
   float: right;
 }
+
 .login__exit:hover {
   background-color: #f5f4f2;
-  box-shadow: 0 0 0 10px #f5f4f2;
+  -webkit-box-shadow: 0 0 0 10px #f5f4f2;
+          box-shadow: 0 0 0 10px #f5f4f2;
   border-radius: 50%;
 }
 
 .login__forgot-pswrd {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 14px;
   color: #FD5A01;
 }
+
 .login__forgot-pswrd:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -181,7 +246,8 @@
   width: 350px;
   height: 46px;
   border: 1px solid rgba(0, 0, 0, 0.27);
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 5px;
   background-color: #FFFFFF;
   font-style: normal;
@@ -190,6 +256,31 @@
   line-height: 14px;
   color: #000000;
 }
+
+.login__input::-webkit-input-placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+}
+
+.login__input:-ms-input-placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+}
+
+.login__input::-ms-input-placeholder {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+}
+
 .login__input::placeholder {
   font-style: normal;
   font-weight: normal;
@@ -197,13 +288,16 @@
   line-height: 14px;
   color: #000000;
 }
+
 @media screen and (max-width: 700px) {
   .login__input {
     width: 100%;
   }
 }
+
 @media screen and (max-width: 1260px) {
   .login__input {
     width: 200px;
   }
 }
+/*# sourceMappingURL=login.css.map */
